# flatpaker

./: README.md  flatpaker.schema.json  pyproject.toml  renpy2flatpak.py  rpgm2flatpak.py  rpypak.schema.json
flatpaker/: __init__.py  config.py  description.py  entry.py  util.py
flatpaker/actions/: build_flatpak.py  build_runtime.py  generate.py
flatpaker/data/: com.github.dcbaker.flatpaker.Platform.yml  com.github.dcbaker.flatpaker.RPGM.Platform.yml  com.github.dcbaker.flatpaker.RenPy.7.py2.Sdk.yml  com.github.dcbaker.flatpaker.RenPy.7.py3.Sdk.yml  com.github.dcbaker.flatpaker.RenPy.8.Sdk.yml
flatpaker/data/files/: renpy-8.py
flatpaker/data/modules/: renpy-shared.yml
flatpaker/data/patches/: pygame-sdl2-7-install-headers.patch  pygame-sdl2-7-use-correct-cython.patch  renpy-7-fix-module-path.patch  renpy-7-fix-styles-dirname.patch
flatpaker/impl/: renpy.py  rpgmaker.py
