[build-system]
  requires = ["flit_core >=3.2,<4"]
  build-backend = "flit_core.buildapi"

[project]
  name = "flatpaker"
  authors = [{ name = "Dylan Baker", email = "dylan@pnwbakers.com" }]
  dynamic = ["version", "description"]
  readme = "README.md"
  requires-python = ">=3.8"
  keywords = ["flatpak", "renpy", "rpgmaker"]
  license = { text = "MIT" }
  classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Topic :: System :: Archiving :: Packaging",
    "License :: OSI Approved :: MIT License",
  ]
  dependencies = ['tomli; python_version<"3.11"']

  [project.scripts]
    flatpaker = "flatpaker.entry:main"

[tool.mypy]
  strict = true
  modules = "flatpaker"

[tool.ruff]
  line-length = 100

  [tool.ruff.format]
    quote-style = "preserve"
